# agentfetch

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SPECIFICATION.md  docker-compose.yml  pyproject.toml  test_comprehensive.py  test_hn_all_features.py  test_hn_deep.py  test_hn_scrape.py
agentfetch/: __init__.py
agentfetch/api/: app.py  routes.py
agentfetch/core/: __init__.py  crawl_store.py  extractor.py  job_queue.py  mapper.py  normalizer.py  proxymanager.py  researcher.py  robotstxt.py  router.py  sanitizer.py  schema.py  searchengine.py  stopper.py
agentfetch/integrations/crewai/: tools.py
agentfetch/integrations/langchain/: tools.py
agentfetch/integrations/llamaindex/: tools.py
agentfetch/integrations/ollama/: tools.py
agentfetch/integrations/openai/: tools.py
agentfetch/mcp_server/: sse.py  stdio.py
examples/: with_autogen.py  with_crewai.py  with_hermes.py  with_langchain.py  with_llamaindex.py  with_rest.sh
tests/: test_extractor.py  test_job_queue.py  test_normalizer.py  test_proxymanager.py  test_robotstxt.py  test_router.py  test_sanitizer.py  test_schema.py  test_searchengine.py
