[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentfetch"
version = "0.1.0"
description = "Open-source web retrieval built for AI agents. Works with LangChain, LlamaIndex, CrewAI, AutoGen, Claude, GPT, Gemini, and any REST agent."
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "trafilatura>=1.9",
    "markdownify>=0.12",
    "playwright>=1.44",
    "pydantic>=2.0",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "redis>=5.0",
    "newspaper3k>=0.2",
    "readability-lxml>=0.8",
    "beautifulsoup4>=4.12",
    "duckduckgo-search>=6.0",
    "mcp>=1.0",
    "anthropic>=0.34",
]

[project.urls]
Homepage = "https://github.com/[YOUR_USERNAME]/agentfetch"

[project.optional-dependencies]
langchain = ["langchain>=0.2", "langchain-core>=0.2"]
llamaindex = ["llama-index>=0.10"]
crewai = ["crewai>=0.55"]
curl-cffi = ["curl-cffi>=0.7"]
all = ["agentfetch[langchain,llamaindex,crewai]"]

[project.scripts]
agentfetch = "agentfetch.api.app:cli"
agentfetch-mcp = "agentfetch.mcp_server.stdio:main"

[tool.setuptools.packages.find]
include = ["agentfetch*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
