[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentfetch"
version = "0.2.0"
description = "Open-source web retrieval built for AI agents. Works with LangChain, LlamaIndex, CrewAI, AutoGen, Claude, GPT, Gemini, and any REST agent."
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "S1D1ART", email = "sid@agentfetch.dev" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "trafilatura>=1.9",
    "markdownify>=0.12",
    "playwright>=1.44",
    "pydantic>=2.0",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "redis>=5.0",
    "newspaper3k>=0.2",
    "readability-lxml>=0.8",
    "beautifulsoup4>=4.12",
    "duckduckgo-search>=6.0",
    "mcp>=1.0",
    "anthropic>=0.34",
]

[project.urls]
Homepage = "https://github.com/S1D1ART/agentfetch"
Repository = "https://github.com/S1D1ART/agentfetch"
Documentation = "https://github.com/S1D1ART/agentfetch"
"Bug Tracker" = "https://github.com/S1D1ART/agentfetch/issues"

[project.optional-dependencies]
langchain = ["langchain>=0.2", "langchain-core>=0.2"]
llamaindex = ["llama-index>=0.10"]
crewai = ["crewai>=0.55"]
curl-cffi = ["curl-cffi>=0.7"]
ollama = []  # uses httpx which is already a dep
search = ["googlesearch-python>=1.2"]  # adds Google search engine support
all = ["agentfetch[langchain,llamaindex,crewai,curl-cffi,search]"]

[project.scripts]
agentfetch = "agentfetch.api.app:cli"
agentfetch-mcp = "agentfetch.mcp_server.stdio:main"

[tool.setuptools.packages.find]
include = ["agentfetch*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
